--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "9",
     "@angular/platform-browser-dynamic": "9",
     "@angular/router": "9",
+    "ngx-loading": "^8.0.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
